--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -16,6 +16,7 @@
     "com.unity.render-pipelines.universal": "17.0.4",
     "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.7",
+    "com.unity.toolchain.macos-arm64-linux-x86_64": "2.0.5",
     "com.unity.ugui": "2.0.0",
     "com.unity.xr.legacyinputhelpers": "2.1.12",
     "com.unity.modules.accessibility": "1.0.0",
